# Orientador_De_Fibras_RL

./: CLAUDE.md  README.md  main.py  pretrained_model.py  pyproject.toml  requirements.txt  results.md
agent/: evaluate.py  train.py
api/: server.py
env/: fiber_env.py  synthetic_generator.py
logs/PPO_1/: events.out.tfevents.1774541277.TheMachine.24660.0
logs/PPO_2/: events.out.tfevents.1774541293.TheMachine.21908.0
logs/PPO_3/: events.out.tfevents.1774541385.TheMachine.2960.0
logs/PPO_4/: events.out.tfevents.1774541492.TheMachine.15672.0
minreq/: README.md  requirements.txt
minreq/env/: fiber_env.py  synthetic_generator.py
minreq/utils/: ellipse_fallback.py  reward.py
results/: eval.csv  eval_v2.csv
tests/: test_env.py  test_generator.py  test_reward.py
utils/: ellipse_fallback.py  histogram.py  reward.py  visualization.py
